--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>HN client</title>
     <script defer src="app.js" type="module"></script>
+    <script src="https://cdn.tailwindcss.com"></script>
 </head>
 <body>
     <noscript>
